--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Go-Guardian-Bypass",
+  "name": "StudentHax-Bypass",
   "version": "1",
   "description": "Made by StudentHax",
   "icons": {
